--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,28 @@
 Package: puff
-Type: Package
-Title: What the Package Does (Title Case)
+Title: Simulate, Run, and Visualize the Gaussian Puff Forward Atmospheric Model
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: 
+    c(
+    person("Teagan", "Ward", email = "teaganward@mines.edu", role = "aut"),
+    person("Philip", "Waggoner", email = "philip.waggoner@mines.edu", role = c("aut", "cre")),
+    person("Dorit", "Hammerling", email = "hammerling@mines.edu", role = c("aut", "ths"))
+    )
+Description: Simulate and run the Gaussian puff forward atmospheric
+    model in sensor (specific sensor coordinates) or grid (across the
+    grid of a full oil and gas operations site) modes. Numerous 
+    visualization options, including static and animated, 2D and 3D, 
+    and a site map generator based on sensor and source coordinates.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/Hammerling-Research-Group/puff
 BugReports: https://github.com/Hammerling-Research-Group/puff/issues
 RoxygenNote: 7.3.1
+Imports: 
+    ggplot2,
+    dplyr,
+    tidyr,
+    magrittr
 Suggests: 
     knitr,
     rmarkdown
