--- a/.github/workflows/CI test.yml
+++ b/.github/workflows/CI test.yml
@@ -1,26 +1,30 @@
-name: CI test
+name: CI tests
 
-on:
-  push:
-    branches: [main, master]
-  pull_request:
+on: [push, pull_request]
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up R
-        uses: r-lib/actions/setup-r@v2
+    - name: Set up R
+      uses: r-lib/actions/setup-r@v2
 
-      - name: Install dependencies
-        run: |
-          Rscript -e 'install.packages(c("devtools", "testthat"))'
-          Rscript -e 'devtools::install_deps(dependencies = TRUE)'
+    - name: Install dependencies
+      run: |
+        Rscript -e 'install.packages("ggplot2")'
+        Rscript -e 'install.packages("dplyr")'
+        Rscript -e 'install.packages("tidyr")'
+        Rscript -e 'install.packages("magrittr")'
+        Rscript -e 'install.packages("htmlwidgets")'
+        Rscript -e 'install.packages("patchwork")'
+        Rscript -e 'install.packages("plotly")'
+        Rscript -e 'install.packages("scales")'
+        Rscript -e 'install.packages("tidyselect")'
 
-      - name: Run tests
-        run: |
-          Rscript -e 'devtools::test(pkg = "puff")'
+    - name: Run tests
+      run: |
+        Rscript -e 'testthat::test_dir("tests/testthat")'
